"working screen done. bug with too many renders fixed. added delete button to every item. Fixed render issiue for order. Set table total and tip fields and prepared button for table close. // reworked design of check section. need to figure out active class for tabs. Tomorrow to`s: - set button to send table info to put in shift stats. test, close all tables. Set close shift button to update stats on main cabinet. and finish the form to post new restaurant. Clean up on saturday"

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,5 +15,4 @@
 .subheader {
     font-size: 1rem;
     color: $darkBackground;
-    padding: 0 0.5rem;
 }
